[package]
name = "terraform-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.93"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
